version 0.8.3
	Added explicit error message when --format is missing to AccessLog log parser
	Added uWSGIParser. Can now be used with logparse --parser uWSGIParser.
	Field names (for key-based -f lookup): 'ip', 'timestamp', 'method',
	'path', 'bytes', 'processing_time'.
	Added unit-test for the uWSGIParser

version 0.8.2
	Updated dependecy on sqlsoup (separated out of sqlalchemy). Thanks to
	Robert Churchill for pointing it out.
	Update SqlAlchemy dependency version to latest stable release

version 0.8.1
    Fixes to logfilter to properly support --parser -based filtering
    Updated documentation and examples in README
    Cleanup and error checking to percentiles utility, fixed to work with osx
    mktemp

version 0.8
	Added the 'logfilter' utility with support for regexp/aho-corasick based matching. See README/documentation for examples
	Added the 'percentiles' utility for quickly computing percentiles out of input data
	Added unit-tests for the logfilter functionality
	Added dependency on the acora string matching library (Implements Aho-Corasick in CPython)
    Minor fixes to qps utility (formatting and parameter naming in README
    example)
    Updated README to be markdown based, cleaned up and edited
	
version 0.7.2
	Added missing -d and -f parameters to logsample for enabling weighted reservoir sampling
	Bugfix to geoip --filter default value triggering a filtering by default (regression introduced in in 0.7.1)

version 0.7.1
	Small fix with geoip --filter default value

version 0.7
	Added -q flag to urlparse (See README/documentation for examples)
	Added -f flag to geoip, allowing one to filter inplace for a specific country (e.g -f 'United States')
	Added --decode options to urlparse that allows one to url-decode (unquote) input stream
	Added sumstat utility/API for generating some common summary statistics for a given histogram-like logfile. See README for examples
	Added 'colsum' script utility that does an arithmetic summation over a column of data