@@ -4,5 +4,6 @@
 [nosetests]
 with-doctest=1
 with-coverage=1
+exe=1
 cover-package=logtools
 verbosity=3
