@@ -4,6 +4,8 @@ version 0.8.3
 	Field names (for key-based -f lookup): 'ip', 'timestamp', 'method',
 	'path', 'bytes', 'processing_time'.
 	Added unit-test for the uWSGIParser
+	Better exception handling for the logparse utility, now reports failure to match 
+	used-specified --fields in more accurate manner, separate from failures in actual parsing of the logline.
 
 version 0.8.2
 	Updated dependecy on sqlsoup (separated out of sqlalchemy). Thanks to
